# sendy

./: .gitignore  Cargo.toml  dev.db
migrations/: 20230828211123_certificates.sql
sendy-framework/: Cargo.toml  build.rs
sendy-framework/docs/: protocol.md
sendy-framework/migrations/: 20230828192503_certificates.sql
sendy-framework/schema/: cert.fbs
sendy-framework/src/: conn.rs  crypto.rs  ctx.rs  lib.rs  peer.rs  req.rs  ser.rs
sendy-framework/src/ctx/: handle.rs  mod.rs  msgdb.rs
sendy-framework/src/ctx/res/: cert.rs  channel.rs  mod.rs
sendy-framework/src/model/: cert.rs  channel.rs  crypto.rs  message.rs  mod.rs  post.rs
sendy-framework/src/msg/: conn.rs  mod.rs
sendy-framework/src/net/: conn.rs  mod.rs  msg.rs  packet.rs  sock.rs
sendy-framework/src/net/sock/: mod.rs  packet.rs  recv.rs  tx.rs
sendy-framework/src/req/: connect.rs  invite.rs  mod.rs  post.rs
sendy-framework/src/res/: cert.rs  mod.rs
sendy-framework/src/ser/: mod.rs  time.rs  util.rs
sendy-framework/src/sock/: mod.rs  packet.rs  recv.rs  tx.rs
sendy-wireformat/: Cargo.toml
sendy-wireformat/derives/src/: lib.rs
sendy-wireformat/src/: lib.rs  rsa.rs  time.rs
sendyterm/: Cargo.toml
sendyterm/src/: main.rs  secret.rs
