[package]
name = "sendy-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9", default-features = false, features = ["sha2", "u64_digit"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
argon2 = "0.5"

digest = "0.10"
crc32fast = "1.3"
uuid = { version = "1.4", features = ["v4"] }

tokio = { version = "1.29", features = ["net", "time", "macros", "rt", "sync"] }
parking_lot = "0.12"
slab = "0.4"
dashmap = "5.5"
bytes = "1.4"
futures = "0.3"

log = "0.4"

untrusted = "0.9"
thiserror = "1.0"
hibitset = { version = "0.6", default-features = false }
