[package]
name = "sendy-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9", default-features = false, features = ["sha2", "u64_digit"] }
signature = { version = "2.1", features = ["std"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
argon2 = "0.5"
generic-array = { version = "0.14", features = ["serde"] }

digest = "0.10"
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.29", features = ["net", "time", "macros", "rt", "sync"] }
parking_lot = "0.12"
slab = "0.4"
dashmap = { version = "5.5", features = ["serde"] }
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"

log = "0.4"

untrusted = "0.9"
thiserror = "1.0"
hibitset = { version = "0.6", default-features = false }
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
